
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 DEC 19a
  * in model/chem/_Cs_Air_Plasma_11s/chem.c and model/chem/_Cs_Air_Plasma_15s/chem.c
    - changed default value of TOWNSENDIONIZATION to TRUE
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - in find_DeltaVk_from_mu(), got rid of setting DeltaVk to zero at the boundary and near 
      boundary nodes
    - in read_model_emfield_actions(), got rid of setting B to zero at the boundary and near
      boundary nodes
      

2020 DEC 16a
  * in bin
    - added HOSTS12.mpich
    - added HOSTS2.mpich
  * modified
    - bin/MHD_generator_cesium.wrp
    - bin/MHD_generator.wrp
    

2020 DEC 08a
  * in lib/exm/exm.c
    - added EXM_f_from_line()
    - added EXM_f_from_monotonespline()
  * in lib/soap/soap.c
    - in functions_builtin(), added code for Interpolate built-in action
    

2020 DEC 01a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_value_fluid(), added Weee post variable
  * in model/thermo/_generic/thermo.c
    - fixed 2 bugs: the enthalpy polynomials for C+ and H+ were not correctly input in one interval
    

2020 NOV 27a
  * in model/chem/_H2_He_CH4_Plasma_13s/chem.hh
    - added N2 as the last species
  * in model/thermo/_generic/thermo.c
    - in find_nuk_eta_kappa(), now include the charged species in the determination of eta and kappa
    - changed MAX_T_FOR_NUK_ETA_KAPPA_POLYNOMIALS from 12000.0 to 6000.0
    

2020 NOV 24a
  * in model/chem/_H2_He_CH4_Plasma_13s/chem.hh
    - changed H2plus for Heplus
  * in model/fluid/_drift-diffusion/fluid.c
    - in write_model_fluid_template(), changed Nkmax from 1e19 to 1e40;
  * in model/share/fluid_share.c