@@ -86,10 +86,11 @@ is1=round(mf*45);
 is2=round(mf*55);
 ie=round(mf*100);
 js=1;
-je=round(mf*200);
+je=round(mf*400);
 
 L=0.1;
-H=0.1;
+H=1.0;
+Vx=3200; {m/s}
 
 dwall=1e-6/mf;
 
@@ -232,7 +233,6 @@ Init(
     _______________________________________________________________________________________
 
     }
-    Vx=3200; {m/s}
     Vy=0; {m/s}
     P=70000; {Pa}
     T=3000; {K}
@@ -240,10 +240,10 @@ Init(
     Te=T; {K}
 
     Species("e-","Cs+","O2","N2","Cs","default");
-    chi_eminus=3e-5;
-    chi_Csplus=3e-5;
+    chi_eminus=3e-10;
+    chi_Csplus=3e-10;
     chi_default=1.0e-30;
-    chi_Cs=7e-5;
+    chi_Cs=1e-4;
     chi_O2=0.21*(1-chi_Cs);
     chi_N2=0.79*(1-chi_Cs);
     All(INIT_TYPE6,Vx,Vy,P,T,chi_eminus,chi_Csplus,chi_O2,chi_N2,chi_Cs,chi_default,Tv,Te);
@@ -264,7 +264,7 @@ Init(
 
     }
     phi=0.0; {V}
-    phi_bot=H*3200/2; {max power extracted is when E=V*B/2}
+    phi_bot=H*Vx/2; {max power extracted is when E=V*B/2}
     phi_top=0;
     All(INITEMF_TYPE1,phi);
     Region(is,js,  ie,js,INITEMF_TYPE1,phi_bot);
